2007-05-21  Andreas Tobler  <a.tobler@schweiz.org>

	* Makefile.am: Remove extra_ldflags_libgc definition.
	* Makefile.in: Regenerate.

2007-05-17  Hans Boehm <Hans.Boehm@hp.com>

	* include/private/gc_priv.h: Define AO_REQUIRE_CAS.

2007-05-16  Hans Boehm <Hans.Boehm@hp.com>

	* finalize.c (GC_unreachable_finalize_mark_proc): Don't return void
	value.

2007-05-15  Hans Boehm <Hans.Boehm@hp.com>

	* configure.ac, version.h, doc/README: Change version to 7.0alpha10.
	* configure: Regenerate.

[7.0alpha9 release]

2007-05-15  Hans Boehm <Hans.Boehm@hp.com>

	* configure.ac, version.h, doc/README: Change version to 7.0alpha9.
	* configure: Regenerate.

2007-05-15  Hans Boehm <Hans.Boehm@hp.com>

	* Makefile.am: Include NT_STSTIC_THREADS_MAKEFILE in dist.
	* Makefile.in: Regenerate.
	* include/private/gc_locks.h: GC_compare_and_exchange, GC_atomic_add:
	remove. NUMERIC_THREAD_ID, THREAD_EQUAL: New.  GC_lock_holder: now
	unsigned long.  I_DONT_HOLD_LOCK, I_HOLD_LOCK: Update.
	* pthread_stop_world.c, pthread_support.c, win32_threads.c: Use
	NUMERIC_THREAD_ID, THREAD_EQUAL.
	* include/private/gcconfig.h: GENERIC_COMPARE_AND_SWAP: Remove.
	* include/private/thread_local_alloc.h: Don't USE_COMPILER_TLS on
	ARM.

2007-05-11  Hans Boehm <Hans.Boehm@hp.com>

	* dbg_mlc.c, include/gc.h, finalize.c: Merge Alexandre Oliva's
	GC_debug_register_finalizer_unreachable() patch from gcc tree.
	* thread_local_alloc.c (GC_malloc, GC_malloc_atomic): Add assertions
	to check GC has been initialized.

2007-05-10  Hans Boehm <Hans.Boehm@hp.com>

	* include/gc_cpp.h: Documentation updates.
	* include/gc_config_macros.h: Don't check for __ppc__ to set
	DARWIN_THREADS.
	* Makefile.am: Include configure_atomic_ops.sh in dist.
	* Makefile.in: Regenerate.

2007-05-08  Hans Boehm <Hans.Boehm@hp.com>

	* Makefile.am: Dont distribute copied atomic_ops files.  Include
	libatomic_ops with "make dist".
	* Makefile.in: Regenerate.
	* configure: Regenerate.